lower case imgs

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             "Done": false,
             "Rooms": [{
                 "Name": "Kitchen",
-                "Image": "dist/img/kitchen/MAIN.png",
+                "Image": "dist/img/kitchen/main.png",
                 "OriginalImageWidth": 1206.0,
                 "Done": false,
                 "ModalCopy": "Dementia can significantly impact a person's daily life, including their eating habits. As the disease progresses, individuals may experience difficulty with tasks that were once routine, such as preparing meals or recognizing familiar foods. This can lead to changes in their dietary preferences and habits.",
@@ -338,7 +338,7 @@
             },
             {
                 "Name": "Living Room",
-                "Image": "dist/img/livingroom/MAIN.png",
+                "Image": "dist/img/livingroom/main.png",
                 "OriginalImageWidth": 1456.0,
                 "Done": false,
                 "ModalCopy": "As dementia progresses, individuals may experience a decline in their social skills and a growing preference for solitude. This withdrawal from social activities can be a challenging aspect of the disease for both the person with dementia and their loved ones.",
@@ -365,13 +365,13 @@
             },
             {
                 "Name": "Bedroom",
-                "Image": "dist/img/bedroom/MAIN.png",
+                "Image": "dist/img/bedroom/main.png",
                 "OriginalImageWidth": 1648.0,
                 "Done": false,
                 "ModalCopy": "Dementia can affect both cognitive and physical functions, leading to difficulties with motor skills and planning. As the disease progresses, individuals may experience decreased coordination, balance problems, and challenges with complex tasks that require planning and organization.",
                 "Objects": [{
                     "Title": "Clothes in pile next to empty dresser",
-                    "Image": "dist/img/bedroom/CLOTHES.png",
+                    "Image": "dist/img/bedroom/clothes.png",
                     "Top": 570,
                     "Left": 800,
                     "Width": 180,
@@ -381,7 +381,7 @@
                 },
                 {
                     "Title": "Note with poor handwriting",
-                    "Image": "dist/img/bedroom/NOTE.png",
+                    "Image": "dist/img/bedroom/note.png",
                     "Top": 170,
                     "Left": 170,
                     "Width": 96,
@@ -392,13 +392,13 @@
             },
             {
                 "Name": "Bathroom",
-                "Image": "dist/img/bathroom/BATHROOM.png",
+                "Image": "dist/img/bathroom/bathroom.png",
                 "OriginalImageWidth": 1206.0,
                 "Done": false,
                 "ModalCopy": "Dementia can significantly impair a person's memory and cognitive functions, leading to difficulties with everyday tasks, including personal hygiene. As the disease progresses, individuals may forget important details or struggle to perform self-care activities.",
                 "Objects": [{
                     "Title": "Chair near tub",
-                    "Image": "dist/img/bathroom/CHAIR.png",
+                    "Image": "dist/img/bathroom/chair.png",
                     "Top": 350,
                     "Left": 350,
                     "Width": 154,
