--- a/index.html
+++ b/index.html
@@ -365,13 +365,13 @@
             },
             {
                 "Name": "Bedroom",
-                "Image": "dist/img/bedroom/main.png",
+                "Image": "dist/img/bedroom/MAIN.png",
                 "OriginalImageWidth": 1648.0,
                 "Done": false,
                 "ModalCopy": "Dementia can affect both cognitive and physical functions, leading to difficulties with motor skills and planning. As the disease progresses, individuals may experience decreased coordination, balance problems, and challenges with complex tasks that require planning and organization.",
                 "Objects": [{
                     "Title": "Clothes in pile next to empty dresser",
-                    "Image": "dist/img/bedroom/clothes.png",
+                    "Image": "dist/img/bedroom/CLOTHES.png",
                     "Top": 570,
                     "Left": 800,
                     "Width": 180,
@@ -381,7 +381,7 @@
                 },
                 {
                     "Title": "Note with poor handwriting",
-                    "Image": "dist/img/bedroom/note.png",
+                    "Image": "dist/img/bedroom/NOTE.png",
                     "Top": 170,
                     "Left": 170,
                     "Width": 96,
@@ -392,13 +392,13 @@
             },
             {
                 "Name": "Bathroom",
-                "Image": "dist/img/bathroom/bathroom.png",
+                "Image": "dist/img/bathroom/BATHROOM.png",
                 "OriginalImageWidth": 1206.0,
                 "Done": false,
                 "ModalCopy": "Dementia can significantly impair a person's memory and cognitive functions, leading to difficulties with everyday tasks, including personal hygiene. As the disease progresses, individuals may forget important details or struggle to perform self-care activities.",
                 "Objects": [{
                     "Title": "Chair near tub",
-                    "Image": "dist/img/bathroom/chair.png",
+                    "Image": "dist/img/bathroom/CHAIR.png",
                     "Top": 350,
                     "Left": 350,
                     "Width": 154,
