prefetch object images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
 
+    <link rel="prefetch" href="dist/img/bathroom/CHAIR.png" />
+    <link rel="prefetch" href="dist/img/bathroom/faucet.png" />
 
+    <link rel="prefetch" href="dist/img/bedroom/CLOTHES.png" />
+    <link rel="prefetch" href="dist/img/bedroom/NOTE.png" />
+
+    <link rel="prefetch" href="dist/img/kitchen/bottle.png" />
+    <link rel="prefetch" href="dist/img/kitchen/food.png" />
+
+    <link rel="prefetch" href="dist/img/livingroom/curtain.png" />
+    <link rel="prefetch" href="dist/img/livingroom/remote.png" />
 
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
