fix typo "locking"

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <div class="d-flex justify-content-center">
                             <img src="dist/img/goodjob.png" class="w-50">
                         </div>
-                        <h3 class="text-center">You did a great job locking for the elements!</h3>
+                        <h3 class="text-center">You did a great job looking for the elements!</h3>
                         <p>Memory care facilities provide housing, care, and therapies for seniors who have Alzheimer’s disease or other forms of dementia in an environment designed to reduce confusion and prevent wandering. A Place for Mom is here to help you make the right decision for your loved one.</p>
                         <h6>Learn More</h6>
                         <p>
